--- a/index.css
+++ b/index.css
@@ -1,17 +1,60 @@
+body {
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  background-color: #121212;
+}
 .container {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  min-height: 100vh;
+}
+
+.container > :nth-child(1) {
+  margin-bottom: 18px;
+  color: white;
 }
 
 #gameBoard {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
 }
 
 #gameBoard > div {
-  border: 1px solid black;
+  border: 1px solid white;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
+}
+
+#turn {
+  width: 100px;
+  height: 40px;
+  border: 1px solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#restart {
+  width: 100px;
+  height: 40px;
+}
+
+button {
+  width: 100%;
+  height: 100%;
+  background-color: #121212;
+  border: 1px solid white;
+  color: white;
+}
+
+button:hover {
+  filter: brightness(90%);
 }
